# enum.hpp

./: .appveyor.yml  .clang-tidy  .clang_complete  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: linux.yml
cmake/: Config.cmake.in
headers/enum.hpp/: enum.hpp  enum_bitflags.hpp
scripts/: gen_msvc2017_project.bat  gen_msvc2019_project.bat  gen_xcode_project.sh
untests/: .clang-tidy  CMakeLists.txt  catch_main.cpp  enum_bitflags_examples.cpp  enum_bitflags_tests.cpp  enum_examples.cpp  enum_tests.cpp  enum_tests.hpp
untests/doctest/: doctest.hpp
vendors/: CMakeLists.txt
